# ad-rs-tutorial

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/appendix/: api-reference.md  troubleshooting.md
docs/src/chapter-01/: forward-vs-reverse.md  index.md  what-is-ad.md
docs/src/chapter-02/: first-derivative.md  index.md  setup.md
docs/src/chapter-03/: active.md  const.md  duplicated-no-need.md  duplicated.md  index.md
docs/src/chapter-04/: basic-usage.md  gradient-descent.md  index.md  multi-variable.md
docs/src/chapter-05/: basic-usage.md  index.md  when-to-use.md
docs/src/chapter-06/: complex-functions.md  index.md  loss-functions.md  neural-network.md  quantum-control.md  scalar-functions.md  vector-operations.md
docs/src/chapter-07/: control-flow.md  debugging.md  index.md
examples/01_scalar_square/: Cargo.toml
examples/01_scalar_square/src/: main.rs
examples/02_scalar_sin/: Cargo.toml
examples/02_scalar_sin/src/: main.rs
examples/03_multi_variable/: Cargo.toml
examples/04_rosenbrock/: Cargo.toml
examples/04_rosenbrock/src/: main.rs
examples/05_vector_dot/: Cargo.toml
examples/06_vector_norm/: Cargo.toml
examples/07_mse_loss/: Cargo.toml
examples/08_cross_entropy/: Cargo.toml
examples/09_linear_layer/: Cargo.toml
examples/10_forward_mode/: Cargo.toml
examples/11_activity_demo/: Cargo.toml
examples/12_control_flow/: Cargo.toml
examples/13_complex_function/: Cargo.toml
examples/14_quantum_control/: Cargo.toml
(+11 files in other folders)
